--- a/stories/SideNav.stories.mdx
+++ b/stories/SideNav.stories.mdx
@@ -171,7 +171,7 @@ export const Template = ({
         .disabled=${disabledSNI}
       >
         <span slot="title">
-          <sgds-icon name="stack"></sgds-icon> SideNav Item #1 (control by
+          <sl-icon name="stack"></sl-icon> SideNav Item #1 (control by
           Argstable)
         </span>
         <sgds-sidenav-link
@@ -185,7 +185,7 @@ export const Template = ({
       </sgds-sidenav-item>
       <sgds-sidenav-item>
         <span slot="title">
-          <sgds-icon name="stack"></sgds-icon>SideNav Item #2</span
+          <sl-icon name="stack"></sl-icon>SideNav Item #2</span
         >
         <sgds-sidenav-link href="#">sgds-sidenav-link</sgds-sidenav-link>
         <sgds-sidenav-link href="#">sgds-sidenav-link</sgds-sidenav-link>
