docs(modal): import instructions

--- a/stories/Modal.stories.mdx
+++ b/stories/Modal.stories.mdx
@@ -115,7 +115,10 @@ The modal component inform users about a specific task and may contain critical 
 ## API
 
 ```jsx
-import { SgdsModal } from "@govtechsg/sgds-web-component/Modal";
+import "@govtechsg/sgds-web-component/Modal";
+import "@govtechsg/sgds-web-component/Button";
+
+// SgdsModal uses SgdsButton and Shoelace's icon under the hood
 ```
 
 <ArgsTable story="Basic" />
