--- a/stories/components/Toast.stories.mdx
+++ b/stories/components/Toast.stories.mdx
@@ -1,7 +1,7 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import "../lib/Toast";
-import "../lib/CloseButton";
+import "../../lib/Toast";
+import "../../lib/CloseButton";
 
 <Meta
   title='Components/Toast'
