--- a/stories/components/Badge.stories.mdx
+++ b/stories/components/Badge.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import "../lib/Badge";
+import "../../lib/Badge";
 
 <Meta
   title="Components/Badge"
@@ -74,9 +74,5 @@ Badges can be used to highlight important bits of information such as labels, no
 </Canvas>
 
 ## API
-
-```jsx
-import { SgdsBadge } from "@govtechsg/sgds-web-component";
-```
 
 <ArgsTable story="Basic" />
