--- a/stories/components/Breadcrumb.stories.mdx
+++ b/stories/components/Breadcrumb.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import "../lib/Breadcrumb";
+import "../../lib/Breadcrumb";
 
 <Meta
   title="Components/Breadcrumb"
