--- a/stories/components/Checkbox.stories.mdx
+++ b/stories/components/Checkbox.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import "../lib/Checkbox";
+import "../../lib/Checkbox";
 
 <Meta
   title='Components/Checkbox'
