--- a/stories/components/Dropdown.stories.mdx
+++ b/stories/components/Dropdown.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import "../lib/Dropdown";
+import "../../lib/Dropdown";
 import { partDescription, dropdownElementProps } from "./common";
 
 <Meta
