--- a/stories/components/Footer.stories.mdx
+++ b/stories/components/Footer.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import  "../lib/Footer";
+import "../../lib/Footer";
 import { partDescription } from "./common";
 
 <Meta
