--- a/stories/components/Masthead.stories.mdx
+++ b/stories/components/Masthead.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import "../lib/Masthead";
+import "../../lib/Masthead";
 
 <Meta
   title="Components/Masthead"
