--- a/stories/components/Modal.stories.mdx
+++ b/stories/components/Modal.stories.mdx
@@ -1,7 +1,7 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import "../lib/Modal";
-import "../lib/Button";
+import "../../lib/Modal";
+import "../../lib/Button";
 
 <Meta
   title="Components/Modal"
