--- a/stories/components/QuantityToggle.stories.mdx
+++ b/stories/components/QuantityToggle.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import  "../lib/QuantityToggle";
+import "../../lib/QuantityToggle";
 
 <Meta
   title="Components/QuantityToggle"
