--- a/stories/components/Radio.stories.mdx
+++ b/stories/components/Radio.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import "../lib/Radio";
+import "../../lib/Radio";
 
 <Meta
   title='Components/Radio'
