--- a/stories/components/Sample.stories.mdx
+++ b/stories/components/Sample.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import { ButtonElement } from "../lib/Button";
+import { ButtonElement } from "../../lib/Button";
 
 <Meta
   title="Components/Sample-mdx"
