--- a/stories/components/SideNav.stories.mdx
+++ b/stories/components/SideNav.stories.mdx
@@ -1,7 +1,7 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import "../lib/Sidenav";
-import { SgdsSidenavItem, SgdsSidenav } from "../lib/Sidenav";
+import "../../lib/Sidenav";
+import { SgdsSidenavItem, SgdsSidenav } from "../../lib/Sidenav";
 import { partDescription } from "./common";
 
 <Meta
