--- a/stories/components/Stepper.stories.mdx
+++ b/stories/components/Stepper.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import "../lib/Stepper";
+import "../../lib/Stepper";
 
 <Meta
   title='Components/Stepper'
