--- a/stories/components/Table.stories.mdx
+++ b/stories/components/Table.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import "../lib/Table";
+import "../../lib/Table";
 
 <Meta
   title='Components/Table'
