--- a/stories/components/Tooltip.stories.mdx
+++ b/stories/components/Tooltip.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import "../lib/Tooltip";
+import "../../lib/Tooltip";
 import { partDescription, dropdownElementProps } from "./common";
 import { commonEvents } from "./common";
 
