--- a/stories/components/ActionCard.stories.mdx
+++ b/stories/components/ActionCard.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import "../../lib/Card";
+import "../../lib/ActionCard";
 
 <Meta
   title='Components/Action Card'
