chore(*): cleanup and update stories API section, title and add dependency section

--- a/stories/components/Badge.stories.mdx
+++ b/stories/components/Badge.stories.mdx
@@ -63,7 +63,9 @@ export const Template = (args) =>
 </sgds-badge>
   `;
 
-# SgdsBadge
+# Badge
+
+## `<sgds-badge>`
 
 Badges can be used to highlight important bits of information such as labels, notifications & status.
 
