--- a/stories/components/Footer.stories.mdx
+++ b/stories/components/Footer.stories.mdx
@@ -103,7 +103,9 @@ export const Template = ({
     </sgds-footer>
   `;
 
-# SgdsFooter
+# Footer
+
+## `<sgds-footer>`
 
 <Canvas>
   <Story
@@ -253,9 +255,5 @@ export const Template = ({
 </Canvas>
 
 ## API
-
-```jsx
-import { SgdsFooter, ColumnLinks } from "@govtechsg/sgds-web-component";
-```
 
 <ArgsTable story="Basic" />
