--- a/stories/components/Input.stories.mdx
+++ b/stories/components/Input.stories.mdx
@@ -216,8 +216,8 @@ export const Template = (args) =>
     </sgds-input>
   `;
 
-# SgdsInput
-
+# Input
+## `<sgds-input>`
 Text inputs allow your users to enter letters, numbers and symbols on a single line.
 
 <Canvas>
@@ -227,10 +227,6 @@ Text inputs allow your users to enter letters, numbers and symbols on a single l
 </Canvas>
 
 ## API
-
-```jsx
-import { SgdsInput } from "@govtechsg/sgds-web-component";
-```
 
 <ArgsTable story="Basic" />
 
