--- a/stories/components/MainNav.stories.mdx
+++ b/stories/components/MainNav.stories.mdx
@@ -141,7 +141,9 @@ export const Template = ({ expand, brandHref, collapseId, active, href, disabled
   `;
 };
 
-# SgdsMainnav
+# Mainnav
+
+## `<sgds-mainnav>`, `<sgds-mainnav-item>`, `<sgds-mainnav-dropdown>`
 
 <Canvas>
   <Story name="Basic" height="500px">
@@ -150,15 +152,6 @@ export const Template = ({ expand, brandHref, collapseId, active, href, disabled
 </Canvas>
 
 ## API
-
-```jsx
-import {
-  SgdsMainnav,
-  SgdsMainnavItem,
-  SgdsMainnavDropdown,
-  MainNavExpandSize,
-} from "@govtechsg/sgds-web-component/MainNav";
-```
 
 <ArgsTable story="Basic" />
 
