--- a/stories/components/QuantityToggle.stories.mdx
+++ b/stories/components/QuantityToggle.stories.mdx
@@ -80,7 +80,8 @@ export const Template = (args) =>
     ></sgds-quantitytoggle>
   `;
 
-# SgdsFooter
+# QuantityToggle
+## `<sgds-quantity-toggle>`
 
 <Canvas>
   <Story name="Basic">
@@ -90,8 +91,8 @@ export const Template = (args) =>
 
 ## API
 
-```jsx
-import { SgdsFooter, ColumnLinks } from "@govtechsg/sgds-web-component";
-```
-
 <ArgsTable story="Basic" />
+
+## Dependency
+
+`<sgds-button>`
