--- a/stories/components/Table.stories.mdx
+++ b/stories/components/Table.stories.mdx
@@ -164,7 +164,9 @@ export const TemplateBreakpointSpecific = (args) => {
   `;
 };
 
-# SgdsTable
+# Table
+
+## `<sgds-table>`
 
 Use the `striped`, `bordered` and `hover` props to customise the table.
 
@@ -185,10 +187,6 @@ Use the `striped`, `bordered` and `hover` props to customise the table.
 </Canvas>
 
 ## API
-
-```jsx
-import { SgdsTable } from "@govtechsg/sgds-web-component";
-```
 
 <ArgsTable story='Basic' />
 
