--- a/stories/components/Toast.stories.mdx
+++ b/stories/components/Toast.stories.mdx
@@ -86,7 +86,9 @@ export const Template = (args) =>
     ></sgds-toast>
   `;
 
-# SgdsAlert
+# Toast
+
+## `<sgds-toast>`
 
 ## Basic
 
@@ -97,9 +99,5 @@ Provide contextual feedback messages for typical user actions with the handful o
 </Canvas>
 
 ## API
-
-```jsx
-import { SgdsAlert } from "@govtechsg/sgds-web-component";
-```
 
 <ArgsTable story='Basic' />
