--- a/stories/components/textarea.stories.mdx
+++ b/stories/components/textarea.stories.mdx
@@ -233,7 +233,9 @@ export const Template = (args) =>
     </sgds-textarea>
   `;
 
-# SgdsInput
+# Textarea
+
+## `<sgds-textarea>`
 
 Text inputs allow your users to enter letters, numbers and symbols on a single line.
 
@@ -244,10 +246,6 @@ Text inputs allow your users to enter letters, numbers and symbols on a single l
 </Canvas>
 
 ## API
-
-```jsx
-import { SgdsATextArea } from "@govtechsg/sgds-web-component/Textarea";
-```
 
 <ArgsTable story="Basic" />
 
