--- a/stories/components/Breadcrumb.stories.mdx
+++ b/stories/components/Breadcrumb.stories.mdx
@@ -61,7 +61,8 @@ export const Template = (args) =>
     </sgds-breadcrumb>
   `;
 
-# SgdsBreadcrumb
+# Breadcrumb
+## `<sgds-breadcrumb>` , `<sgds-breadcrumb-item>`
 
 Breadcrumbs help users to navigate and understand where they are on the current website or service.
 
@@ -72,9 +73,5 @@ Breadcrumbs help users to navigate and understand where they are on the current 
 </Canvas>
 
 ## API
-
-```jsx
-import { SgdsBreadcrumb } from "@govtechsg/sgds-web-component";
-```
 
 <ArgsTable story="Basic" />
