--- a/stories/components/Checkbox.stories.mdx
+++ b/stories/components/Checkbox.stories.mdx
@@ -181,6 +181,8 @@ export const Template = (args) => {
 
 # Checkbox
 
+## `<sgds-checkbox>`
+
 ## Basic
 
 <Canvas>
@@ -188,9 +190,5 @@ export const Template = (args) => {
 </Canvas>
 
 ## API
-
-```jsx
-import { SgdsCheckbox } from "@govtechsg/sgds-web-component/Checkbox";
-```
 
 <ArgsTable story='Basic' />
