--- a/stories/components/Modal.stories.mdx
+++ b/stories/components/Modal.stories.mdx
@@ -84,7 +84,9 @@ export const Template = (args) =>
     </sgds-modal>
   `;
 
-# SgdsModal
+# Modal
+
+## `<sgds-modal>`
 
 The modal component inform users about a specific task and may contain critical information which users then have to make a decision. E.g Accepting the T&Cs during signup
 
@@ -96,8 +98,8 @@ The modal component inform users about a specific task and may contain critical 
 
 ## API
 
-```jsx
-import { SgdsModal } from "@govtechsg/sgds-web-component";
-```
-
 <ArgsTable story="Basic" />
+
+## Dependency
+
+`<sgds-button>`
