--- a/stories/components/SideNav.stories.mdx
+++ b/stories/components/SideNav.stories.mdx
@@ -198,23 +198,15 @@ export const Template = ({
   `;
 };
 
-# SgdsSidenav, SgdsSidenavItem, SgdsSgdsSidenavLink
+# Sidenav
+
+## `<sgds-sidenav>`, `<sgds-sidenav-item>`, `<sgds-sidenav-link>`
 
 <Canvas>
   <Story name="Basic">{Template.bind({})}</Story>
 </Canvas>
 
-_Example is using shoelace's icon. See [here](https://shoelace.style/components/icon)_
-
 ## API
-
-```jsx
-import {
-  SgdsSidenav,
-  SgdsSidenavLink,
-  SgdsSidenavItem,
-} from "@govtechsg/sgds-web-component/Sidenav";
-```
 
 <ArgsTable story="Basic" />
 
