refactor(accordion): refactor conditional statement

--- a/stories/Accordion.stories.mdx
+++ b/stories/Accordion.stories.mdx
@@ -68,6 +68,12 @@ import "../lib/Accordion";
 
 export const Template = (args) =>
   html`
+  <sgds-accordion-item
+      summary="Solo Accordion"
+      accordionItemClasses="mb-4"
+      > 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores soluta eaque fugit fuga distinctio? Eum.
+  </sgds-accordion-item>
   <sgds-accordion
     .allowMultiple=${args.allowMultiple}
     .accordionClasses=${args.accordionClasses} 
@@ -79,19 +85,19 @@ export const Template = (args) =>
         ${args.content} 
       </sgds-accordion-item>
       <sgds-accordion-item
-      .summary=${args.summary}
+      summary="Accordion 1"
       .accordionItemClasses=${args.accordionItemClasses} 
       > 
         ${args.content} 
       </sgds-accordion-item>
       <sgds-accordion-item
-      .summary=${args.summary}
+      summary="Accordion 2"
       .accordionItemClasses=${args.accordionItemClasses} 
       > 
         ${args.content} 
       </sgds-accordion-item>
       <sgds-accordion-item
-      .summary=${args.summary}
+      summary="Accordion 3"
       .accordionItemClasses=${args.accordionItemClasses} 
       > 
         ${args.content} 
