--- a/stories/FileUpload.stories.mdx
+++ b/stories/FileUpload.stories.mdx
@@ -15,15 +15,40 @@ import "../lib/FileUpload";
     },
     checkedIcon: {
       control: "text",
-      defaultValue: "check",
-      table: { category: "props", type: { summary: "Element" } },
-      description: "Customize the checked icon",
+      defaultValue: `<svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="green"
+        class="bi bi-check align-middle me-2"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"
+        />
+      </svg>`,
+      table: { category: "props", type: { summary: "string" } },
+      description: "Customize the checked icon with SVG",
     },
     cancelIcon: {
       control: "text",
-      defaultValue: "x-octagon",
-      table: { category: "props", type: { summary: "Element" } },
-      description: "Customize the cancel icon",
+      defaultValue: `<svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="red"
+        class="bi bi-x-circle align-middle ms-2"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+        />
+        <path
+          d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"
+        />
+      </svg>`,
+      table: { category: "props", type: { summary: "string" } },
+      description: "Customize the cancel icon with SVG",
     },
     variant: {
       control: "select",
@@ -64,12 +89,13 @@ import "../lib/FileUpload";
         category: "slots",
       },
     },
-     'sgds-change':{
-      table:{ 
+    "sgds-change": {
+      table: {
         category: "Events",
         type: { summary: "Event" },
       },
-      description: "Emitted the updated fileList obj when item is added or removed"
+      description:
+        "Emitted the updated fileList obj when item is added or removed",
     },
   }}
 />
@@ -81,8 +107,21 @@ export const Template = (args) => html`
     .disabled=${args.disabled}
     .checkedIcon=${args.checkedIcon}
     .cancelIcon=${args.cancelIcon}
-    ><sl-icon name="upload" class="me-2 align-middle"></sl-icon>Choose a
-    File</sgds-fileupload
+    ><svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="16"
+      height="16"
+      fill="currentColor"
+      class="bi bi-upload me-2"
+      viewBox="0 0 16 16"
+    >
+      <path
+        d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"
+      />
+      <path
+        d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z"
+      /></svg
+    >Choose a File</sgds-fileupload
   >
 `;
 
@@ -106,12 +145,21 @@ import { SgdsFileUpload } from "@govtechsg/sgds-web-component";
 
 ## Customize the checked and cancel icons
 
-Change up the default checked and cancel icons by passing in icons of your choice.
+Change up the default checked and cancel icons by passing in the SVG of your choice.
 
 <Canvas>
   <Story
     name='Custom Icons'
-    args={{ checkedIcon: "check2-circle", cancelIcon: "x-octagon" }}
+    args={{
+      checkedIcon: `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2-circle align-middle ms-2" viewBox="0 0 16 16">
+  <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z"/>
+  <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z"/>
+</svg>`,
+      cancelIcon: `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-octagon align-middle me-2" viewBox="0 0 16 16">
+  <path d="M4.54.146A.5.5 0 0 1 4.893 0h6.214a.5.5 0 0 1 .353.146l4.394 4.394a.5.5 0 0 1 .146.353v6.214a.5.5 0 0 1-.146.353l-4.394 4.394a.5.5 0 0 1-.353.146H4.893a.5.5 0 0 1-.353-.146L.146 11.46A.5.5 0 0 1 0 11.107V4.893a.5.5 0 0 1 .146-.353L4.54.146zM5.1 1 1 5.1v5.8L5.1 15h5.8l4.1-4.1V5.1L10.9 1H5.1z"/>
+  <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+</svg>`,
+    }}
   >
     {Template.bind({})}
   </Story>
