--- a/stories/components/Accordion.stories.mdx
+++ b/stories/components/Accordion.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { html } from "lit-html";
-import "../lib/Accordion";
+import "../../lib/Accordion";
 
 <Meta
   title="Components/Accordion"
@@ -54,7 +54,7 @@ import "../lib/Accordion";
       },
        description: 'Trigger an event on hide after animation is completed.'
     },
-    content:{
+    "default":{
       defaultValue: 'This is the accordion content',
       control: "text" ,
       table: { 
