--- a/stories/FileUpload.stories.mdx
+++ b/stories/FileUpload.stories.mdx
@@ -20,7 +20,7 @@ import "../lib/FileUpload";
         width="16"
         height="16"
         fill="green"
-        class="bi bi-check align-middle me-2"
+        class="bi bi-check"
         viewBox="0 0 16 16"
       >
         <path
@@ -37,7 +37,7 @@ import "../lib/FileUpload";
         width="16"
         height="16"
         fill="red"
-        class="bi bi-x-circle align-middle ms-2"
+        class="bi bi-x-circle"
         viewBox="0 0 16 16"
       >
         <path
@@ -89,7 +89,7 @@ import "../lib/FileUpload";
         category: "slots",
       },
     },
-    "sgds-change": {
+    "sgds-files-selected": {
       table: {
         category: "Events",
         type: { summary: "Event" },
@@ -127,6 +127,8 @@ export const Template = (args) => html`
 
 # SgdsFileUpload
 
+## `<sgds-fileupload>`
+
 File Upload is the process of publishing information (web pages, text, pictures, video, etc.) to a remote server. It allows uploading of a single or multiple files at any one time.
 
 <Canvas>
@@ -137,11 +139,11 @@ File Upload is the process of publishing information (web pages, text, pictures,
 
 ## API
 
-```jsx
-import { SgdsFileUpload } from "@govtechsg/sgds-web-component";
-```
-
 <ArgsTable story='Basic' />
+
+## Dependency
+
+`<sgds-button>`
 
 ## Customize the checked and cancel icons
 
@@ -151,11 +153,11 @@ Change up the default checked and cancel icons by passing in the SVG of your cho
   <Story
     name='Custom Icons'
     args={{
-      checkedIcon: `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2-circle align-middle ms-2" viewBox="0 0 16 16">
+      checkedIcon: `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2-circle" viewBox="0 0 16 16">
   <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z"/>
   <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z"/>
 </svg>`,
-      cancelIcon: `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-octagon align-middle me-2" viewBox="0 0 16 16">
+      cancelIcon: `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-octagon" viewBox="0 0 16 16">
   <path d="M4.54.146A.5.5 0 0 1 4.893 0h6.214a.5.5 0 0 1 .353.146l4.394 4.394a.5.5 0 0 1 .146.353v6.214a.5.5 0 0 1-.146.353l-4.394 4.394a.5.5 0 0 1-.353.146H4.893a.5.5 0 0 1-.353-.146L.146 11.46A.5.5 0 0 1 0 11.107V4.893a.5.5 0 0 1 .146-.353L4.54.146zM5.1 1 1 5.1v5.8L5.1 15h5.8l4.1-4.1V5.1L10.9 1H5.1z"/>
   <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
 </svg>`,
